# batch-serving

./: config.yaml  config.yml  main.py  pyproject.toml  requirements-dev.txt
src/: app.py  container.py
src/classifier/: classifier.py
src/loader/: loader.py
src/model/: __init__.py  model.py
src/preprocess/: preprocess.py
src/service/: service.py
src/utils/: __init__.py
test/: test_model_cv.py  test_model_nlp.py  test_system.py  test_utils.py  unit_test.py
